--- a/DancingGoat/Views/Home/Index.cshtml
+++ b/DancingGoat/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         if (isFirstArticle)
         {
             isFirstArticle = false;
-            <div class="article-tile article-tile-large">
+            <div class="article-tile article-tile-large" data-kontent-item-id="6ea11626-336d-47e5-9f35-2d44fa1ad6d6" >
                 <div class="col-md-12 col-lg-6">
                     <a asp-controller="Articles" asp-action="Show" asp-route-urlSlug="@article.UrlPattern">
                         <img-asset asset="@article.TeaserImage.First()" class="article-tile-image" default-width="300">
