--- a/DancingGoat/Views/Shared/_Layout.cshtml
+++ b/DancingGoat/Views/Shared/_Layout.cshtml
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title - Dancing Goat</title>
     <link rel="stylesheet" href="~/css/site.css" />
+    <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/&#64;kontent-ai/smart-link&#64;latest/dist/kontent-smart-link.umd.min.js"></script>
+    <script type="text/javascript">
+      KontentSmartLink.initializeOnLoad({ queryParam: "preview" });
+    </script>
 </head>
-<body>
+<body data-kontent-project-id="e9fa9f27-f64c-00e7-e5d9-577991dce039" data-kontent-language-codename="en-US">
     <div class="page-wrap">
         <header class="header" role="banner">
             <div class="menu">
