initial flex commit

--- a/DancingGoat/Views/Shared/_Layout.cshtml
+++ b/DancingGoat/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <title>@ViewBag.Title - Dancing Goat</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <script type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/&#64;kontent-ai/smart-link&#64;latest/dist/kontent-smart-link.umd.min.js"></script>
+            src="https://cdn.jsdelivr.net/npm/&#64;kontent-ai/smart-link&#64;latest/dist/kontent-smart-link.umd.min.js">
+    </script>
     <script type="text/javascript">
       KontentSmartLink.initializeOnLoad({ queryParam: "preview" });
     </script>
