Seperate link types PoC

--- a/DancingGoat/Views/Shared/DisplayTemplates/CTA.cshtml
+++ b/DancingGoat/Views/Shared/DisplayTemplates/CTA.cshtml
@@ -1,31 +1,20 @@
-﻿@model KontentAiModels.CallToAction
+﻿@using DancingGoat.Models;
+@using KontentAiModels;
+@model KontentAiModels.CallToAction;
 @{
-    var link_type = @Model.Target.First().LinkType.First().Codename;
+    var link = @Model.Target.First();
 }
 
-<div class="col-lg-3 col-md-6 col-sm-12">
+<div style="clear:both; text-align: center;">
     <div class="article-tile">
         <div class="article-tile-content">
             <h2 class="h4">
                 @Html.DisplayFor(vm => vm.Text)
             </h2>
             <p class="article-tile-text">
-            @if(@link_type.Equals("external")){
-
-                <a href=@Model.Target.First().ExternalUrl target="_blank">
-                    @Html.DisplayFor(vm => vm.Target.First().Label)
-                </a>
-                
-            }
-
-            else if(@link_type.Equals("internal")){
-                @*How do we NOT hardcode the controller and action?*@
-               @Html.ActionLink(@Model.Text, "Show", "Spotlight", new { id = @Model.Target.First().InternalLink.First().Url})
-            }
-
-            else {
-                <div>Link type not set</div>
-            }
+            <div>
+                @Html.DisplayFor(vm => vm.Target)
+            </div>
             </p>
         </div>
     </div>
