--- a/DancingGoat/Views/Shared/DisplayTemplates/Link.cshtml
+++ b/DancingGoat/Views/Shared/DisplayTemplates/Link.cshtml
@@ -6,6 +6,7 @@
         <a href=@Model.ExternalUrl>@Model.Label</a>
     }
     else if (link_type == "internal") {
-       @Html.ActionLink(@Model.Label, "Show", "Spotlight",new { id = @Model.InternalLink.First().Url})
+       //@Html.ActionLink(@Model.Label, "Show", "Spotlight",new { id = @Model.InternalLink.First().Url})
+       <p>"internal"</p>
     }
 }
