Adds CTA support to WSL Homepage

--- a/DancingGoat/Views/Homepage/Index.cshtml
+++ b/DancingGoat/Views/Homepage/Index.cshtml
@@ -75,3 +75,7 @@
         </div>
         }
     </div>
+    @foreach (KontentAiModels.CallToAction cta in Model.CTAs)
+    {
+        @Html.DisplayFor(vm => cta, "CTA")
+    }
